Improved logging and sensor performances